# Multi-GPU-DCX

./: .gitignore  LICENSE  README.md  TestMult.cu  libcubBenchmark.sh
CudaMPITest/: CMakeLists.txt  CudaMPI.cu
IpcMem/: CMakeLists.txt  ipcMem.cu
NCCL/: CMakeLists.txt  cuda_aware.cu  cuda_staged.cu  testNccl.cu
Saiscub/: .gitignore  CMakeLists.txt  Saiscub.cu  Saiscub.sh  io.cu  io.cuh
TestFramework/: CMakeLists.txt  LibcubBenchmark.cu  io.cuh  libcubBenchmark.sh  plot.py
libcubwt-1.0.0/: CMakeLists.txt  LibcubBenchmark.cu  Test  a.out  io.cu  io.cuh  main.cu
libsais/: CMakeLists.txt  LibdsaisBenchmark.c  LibsaisBenchmark.c
multi-gpu-suffix-array/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  multigputest.sh
multi-gpu-suffix-array/src/: cuda_helpers.h  dcx_data_generation.hpp  io.cu  io.cuh  main.cu  merge_copy_detour_guide.hpp  performancerecorder.hpp  prefix_doubling.hpp  stages.h  suffix_array.cu  suffix_array_kernels.cu  suffix_array_kernels.cuh  suffix_array_templated_kernels.cuh  suffix_types.h  suffixarraymemorymanager.hpp  suffixarrayperformancemeasurements.hpp  test_merges.cu
multi-gpu-suffix-array/src/distrib_merge/: distrib_merge.hpp  distrib_merge_topology_helper.hpp  test_distrib_merge.cu
multi-gpu-suffix-array/src/gossip/: all_to_all.cuh  all_to_all_dgx1.cuh  context.cuh  multisplit.cuh
multi-gpu-suffix-array/src/multisplit/: LICENSE.md
multi-gpu-suffix-array/src/remerge/: merge_types.hpp  mergenodeutils.hpp  mergeprocessor.hpp  multi_way_micromerge.hpp  multi_way_micromerge_on_one_node.hpp  multi_way_partitioning_search.hpp  remerge_gpu_topology_helper.hpp  remergemanager.hpp
multi-gpu-suffix-array/src/sorting/: samplesort.cuh  sort_kernels.cuh
